--- a/app/src/main/res/drawable/splash_layout.xml
+++ b/app/src/main/res/drawable/splash_layout.xml
@@ -5,7 +5,7 @@
 
     <item>
         <bitmap
-            android:gravity="center" android:src="@drawable/lotto_splash"/>
+            android:gravity="center" android:src="@drawable/ic_launcher"/>
     </item>
 
 </layer-list>
