--- a/app/src/main/res/layout/itemview.xml
+++ b/app/src/main/res/layout/itemview.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="60dp"
     android:layout_margin="3dp"
     android:orientation="horizontal">
 
@@ -10,7 +10,8 @@
         android:layout_height="match_parent"
         android:layout_weight="8"
         android:gravity="left"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_margin="8dp">
 
         <TextView
             android:id="@+id/item_title"
@@ -28,7 +29,10 @@
             android:layout_weight="1"
             android:maxLength="50"
             android:text="내용"
-            android:textSize="13dp" />
+            android:textSize="13dp"
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            />
     </LinearLayout>
 
     <Button
